<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"> <!-- Fondo negro -->

    <!-- Imagen en la parte superior -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <!-- Contenedor para el texto -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@id/imageView">

        <!-- Todos los textos en rojo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examen_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tsdmh"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo"
            android:textSize="18sp"
            android:textColor="#FF0000"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/countdownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:layout_marginTop="32dp"
            android:text="5"/>
    </LinearLayout>
</RelativeLayout>